--- a/fs-api/Makefile
+++ b/fs-api/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = -g -Wall -pedantic -std=c99
+CFLAGS = -g -Wall -pedantic
 HEADERS = -I .
 
 #la lib condivisa sarà messa nella directory libs del progetto
@@ -7,13 +7,12 @@ LIBFS_API = libfs-api.so
 
 .PHONY: clean cleanall
 
-%.o: %.c
-    $(CC) $(CFLAGS) -c -fPIC -o $@ $<
-
 $(LIBFS_API): fs-api.o
-    mkdir -p ../libs
-    $(CC) $(CFLAGS) -shared -o ../libs/$@ $<
+	mkdir -p ../libs
+	$(CC) $(CFLAGS) $(HEADERS) -shared -o ../libs/$@ $<
+fs-api.o: fs-api.c
+	$(CC) $(CFLAGS) $(HEADERS) -c -fPIC -o $@ $<
 clean: $(LIBFS_API)
-    -rm -fr $(LIBFS_API)
+	-rm -fr $(LIBFS_API)
 cleanall: clean $(wildcard *.o)
-    -rm -fr $(wildcard *.o)
+	-rm -fr $(wildcard *.o)
