--- a/fs-server/Makefile
+++ b/fs-server/Makefile
@@ -2,7 +2,10 @@ CC = gcc
 CFLAGS = -g -Wall -pedantic
 HEADERS = -I .. -I .
 
-SERVER = fs-server.out
+LIBPATH = -Wl,-rpath=./libs -L ../libs
+LIBS = -lfs-api -lutilities -lpthread
 
-$(SERVER): parse_config.c server.c utils.c logging.c worker.c
-	$(CC) $(CFLAGS) $(HEADERS) -o ../$@ $^
+SERVER = ../fs-server.out
+
+$(SERVER): parse_config.c server.c logging.c worker.c
+	$(CC) $(CFLAGS) $(HEADERS) $(LIBPATH) -o $@ $^ $(LIBS)
