Fixato target fs-api del makefile ed aggiornata la relazione

--- a/client/Makefile
+++ b/client/Makefile
@@ -9,7 +9,9 @@ CLIENT = ../client.out
 
 $(CLIENT): client.o client-utils.o
 	$(CC) $(CFLAGS) $(HEADERS) $(LIBPATH) -o $@ $^ $(LIBS)
+	mv $^ ../objs
 client.o: client.c client.h
 	$(CC) $(CFLAGS) $(HEADERS) -c -o $@ $< -lutilities
 client-utils.o: client-utils.c client.h
 	$(CC) $(CFLAGS) $(HEADERS) -c -o $@ $< -lutilities
+
