Portata avanti API: openConnection, closeConnection, readFile Scritto sulla relazione protocollo di comunicazione con il server

--- a/fs-api/Makefile
+++ b/fs-api/Makefile
@@ -1,12 +1,15 @@
 CC = gcc
 CFLAGS = -g -Wall -pedantic
-HEADERS = -I .
+HEADERS = -I . -I ..
+
+LIBPATH = -Wl,-rpath=./libs -L ../libs
+LIBS = -lutilities
 
 #la lib condivisa sarà messa nella directory libs del progetto
 LIBFS_API = ../libs/libfs-api.so
 
 $(LIBFS_API): fs-api.o
-	$(CC) $(CFLAGS) -shared -o $@ $<
+	$(CC) $(CFLAGS) $(LIBPATH) -shared -o $@ $< $(LIBS)
 	mv $< ../objs/
-fs-api.o: fs-api.c
-	$(CC) $(CFLAGS) $(HEADERS) -c -fPIC -o $@ $<
+fs-api.o: fs-api.c fs-api-utils.c
+	$(CC) $(CFLAGS) $(HEADERS) -c -fPIC -o $@ $^
