--- a/fs-server/Makefile
+++ b/fs-server/Makefile
@@ -7,5 +7,5 @@ LIBS = -lfs-api -lutilities -lpthread
 
 SERVER = ../fs-server.out
 
-$(SERVER): parse_config.c server.c logging.c worker.c
+$(SERVER): parse_config.c server.c logging.c worker.c queue.c
 	$(CC) $(CFLAGS) $(HEADERS) $(LIBPATH) -o $@ $^ $(LIBS)
