Finito(?) parsing opzioni client, ad eccezione di -l, -u, -c che però sono nella optstring

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CFLAGS = -g -Wall -pedantic
-HEADERS = -I . -I ..
+HEADERS = -I . -I .. -I ../fs-api
 
 LIBPATH = -Wl,-rpath=./libs -L ../libs
 LIBS = -lutilities
