!importante bugfix vari: ora un client può aprire file

--- a/client/Makefile
+++ b/client/Makefile
@@ -3,15 +3,15 @@ CFLAGS = -g -Wall -pedantic
 HEADERS = -I . -I .. -I ../fs-api
 
 LIBPATH = -Wl,-rpath=./libs -L ../libs
-LIBS = -lutilities
+LIBS = -lfs-api -lutilities
 
 CLIENT = ../client.out
 
 $(CLIENT): client.o client-utils.o
 	$(CC) $(CFLAGS) $(HEADERS) $(LIBPATH) -o $@ $^ $(LIBS)
 	mv $^ ../objs
-client.o: client.c client.h
-	$(CC) $(CFLAGS) $(HEADERS) -c -o $@ $< -lutilities
-client-utils.o: client-utils.c client.h
-	$(CC) $(CFLAGS) $(HEADERS) -c -o $@ $< -lutilities
+client.o: client.c
+	$(CC) $(CFLAGS) $(HEADERS) -c -o $@ $<
+client-utils.o: client-utils.c
+	$(CC) $(CFLAGS) $(HEADERS) -c -o $@ $<
 
