--- a/fs-api/Makefile
+++ b/fs-api/Makefile
@@ -8,9 +8,9 @@ LIBS = -lutilities
 #la lib condivisa sarà messa nella directory libs del progetto
 LIBFS_API = ../libs/libfs-api.so
 
-$(LIBFS_API): fs-api.o
-	$(CC) $(CFLAGS) $(LIBPATH) -shared -o $@ $< $(LIBS)
-	mv $< ../objs/
+$(LIBFS_API): fs-api.o fs-api-utils.o
+	$(CC) $(CFLAGS) $(LIBPATH) -shared -o $@ $^ $(LIBS)
+	mv $^ ../objs/
 fs-api.o: fs-api.c
 	$(CC) $(CFLAGS) $(HEADERS) -c -fPIC -o $@ $<
 fs-api-utils.o: fs-api-utils.c
