--- a/fs-api/Makefile
+++ b/fs-api/Makefile
@@ -10,7 +10,7 @@ LIBFS_API = ../libs/libfs-api.so
 
 $(LIBFS_API): fs-api.o fs-api-utils.o
 	$(CC) $(CFLAGS) $(LIBPATH) -shared -o $@ $^ $(LIBS)
-	mv $^ ../objs/
+	-mv $^ ../objs/
 fs-api.o: fs-api.c
 	$(CC) $(CFLAGS) $(HEADERS) -c -fPIC -o $@ $<
 fs-api-utils.o: fs-api-utils.c
