--- a/fs-server/Makefile
+++ b/fs-server/Makefile
@@ -7,13 +7,15 @@ LIBS = -lfs-api -lutilities -licl_hash -lpthread
 
 SERVER = ../fs-server.out
 
-$(SERVER): server.o worker.o api_backend.o api_backend-utils.o term_thread.o sock_init.o server-ds.o parse_config.o lock_unlock.o logging.o
+$(SERVER): server.o worker.o api_backend.o wait_lock.o api_backend-utils.o term_thread.o sock_init.o server-ds.o parse_config.o lock_unlock.o logging.o
 	$(CC) $(CFLAGS) $(HEADERS) $(LIBPATH) -o $@ $^ $(LIBS)
 server.o: server.c
 	$(CC) $(CFLAGS) $(HEADERS) $(LIBPATH) -c -o $@ $<
 worker.o: worker.c
 	$(CC) $(CFLAGS) $(HEADERS) $(LIBPATH) -c -o $@ $<
 api_backend.o: api_backend.c
+	$(CC) $(CFLAGS) $(HEADERS) $(LIBPATH) -c -o $@ $^
+wait_lock.o: wait_lock.c
 	$(CC) $(CFLAGS) $(HEADERS) $(LIBPATH) -c -o $@ $^
 api_backend-utils.o: api_backend-utils.c
 	$(CC) $(CFLAGS) $(HEADERS) $(LIBPATH) -c -o $@ $^
